Closed Bug 1551740 Opened 7 years ago Closed 7 years ago

Assertion failure: !stream->obsolete, at media/mtransport/nricectx.cpp:420

Categories

(Core :: WebRTC: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: jib, Assigned: bwc)

References

Details

Attachments

(1 file)

I get this assert crash with the new wpt tests added in bug 1551316, blocking landing:

21:53:56 INFO - PID 1939 | Assertion failure: !stream->obsolete, at /builds/worker/workspace/build/src/media/mtransport/nricectx.cpp:420
21:53:57 INFO - Browser not responding, setting status to CRASH

I get a lot of them so it seems reproducible. Byron, any idea what's going on?

The try push is from an earlier build, but hopefully it still reproduces.

Flags: needinfo?(docfaraday)

This is weird. Something is definitely wrong here. Looking into it.

Flags: needinfo?(docfaraday)
Assignee: nobody → docfaraday
Priority: -- → P2
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: