Bug 1551740: Don't gather on obsolete streams. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D31269

--HG--
extra : moz-landing-system : lando